--- a/gaurdedText/gaurdedText.csproj
+++ b/gaurdedText/gaurdedText.csproj
@@ -169,6 +169,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\loading.css" />
     <Content Include="Content\myassests\createsite.css" />
     <Content Include="Content\myassests\enterpassword.css" />
     <Content Include="Global.asax" />
